syntax = "proto3";

package rawkv;

// ------------- RawKV 数据结构 -------------

message RawGetRequest {
    bytes key = 1;
    string cf = 2;
}

message RawGetResponse {
    bytes value = 1;
    bool not_found = 2;
}

message RawPutRequest {
    bytes key = 1;
    bytes value = 2;
    string cf = 3;
}

message RawPutResponse {}

message RawDeleteRequest {
    bytes key = 1;
    string cf = 2;
}

message RawDeleteResponse {}

message RawScanRequest {
    bytes start_key = 1;
    uint32 limit = 2;
    string cf = 3;
}

message KvPair {
    bytes key = 1;
    bytes value = 2;
}

message RawScanResponse {
    repeated KvPair kvs = 1;
}

// ------------- RawKV RPC 服务 -------------

service RawKV {
    rpc RawGet (RawGetRequest) returns (RawGetResponse);
    rpc RawPut (RawPutRequest) returns (RawPutResponse);
    rpc RawDelete (RawDeleteRequest) returns (RawDeleteResponse);
    rpc RawScan (RawScanRequest) returns (RawScanResponse);
}
